wlogout/style.css
/* wlogout style - Material You (auto-generated by matugen) */

window {
    font-family: JetBrainsMono Nerd Font;
    font-size: 12pt;
    color: #dee3e5;
    background-color: rgba(0, 0, 0, 0.6);
}

button {
    background-repeat: no-repeat;
    background-position: center 30%;
    background-size: 40%;
    background-color: transparent;
    transition: all 0.3s ease-in;
    box-shadow: 0 0 10px 2px transparent;
    border-radius: 20px;
    margin: 8px;
    padding: 0;
    padding-bottom: 28px;
    min-width: 130px;
    min-height: 130px;
}

button:focus {
    box-shadow: none;
    background-size: 40%;
}

button:hover {
    background-size: 50%;
    box-shadow: 0 0 10px 3px rgba(0, 0, 0, 0.4);
    background-color: rgba(131, 210, 228, 0.25);
    color: transparent;
    transition: all 0.3s cubic-bezier(.55, 0.0, .28, 1.682), box-shadow 0.5s ease-in;
}

#shutdown {
    background-image: image(url("./icons/power.png"));
}
#shutdown:hover {
    background-image: image(url("./icons/power-hover.png"));
}

#logout {
    background-image: image(url("./icons/logout.png"));
}
#logout:hover {
    background-image: image(url("./icons/logout-hover.png"));
}

#reboot {
    background-image: image(url("./icons/restart.png"));
}
#reboot:hover {
    background-image: image(url("./icons/restart-hover.png"));
}

#lock {
    background-image: image(url("./icons/lock.png"));
}
#lock:hover {
    background-image: image(url("./icons/lock-hover.png"));
}

#hibernate {
    background-image: image(url("./icons/hibernate.png"));
}
#hibernate:hover {
    background-image: image(url("./icons/hibernate-hover.png"));
}

